--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <html>
+
 <head>
+    <link rel="stylesheet" href="jamie.css" type="text/css" />
+    <title>homework 2</title>
 </head>
+
 <body>
-hi
-</hody>
+    hi
+    </hody>
+
 </html>
