--- a/index.html
+++ b/index.html
@@ -6,34 +6,79 @@
 </head>
 
 <body>
-    
-		<div id="header">
-			<p id="name">Your Name Here</p>
-			<a href="mailto:you@yourdomain.com"><p id="email">you@yourdomain.com</p></a>
-		</div>
-		<div class="left"></div>
-		<div class="right">
-			<h4>Objective</h4>
-			<p>To take a position as a software engineer.</p>
-			<h4>Experience</h4>
-			<p>Junior Developer, Software Company (2010 - Present)</p>
-			<ul>
-				<li>Designed and implemented end-user features for Flagship Product</li>
-				<li>Wrote third-party JavaScript and Ruby libraries</li>
-			</ul>
-			<h4>Skills</h4>
-			<p>Languages: C#, JavaScript, Python, Ruby</p>
-			<p>Frameworks: .NET, Node.js, Django, Ruby on Rails</p>
-			<h4>Education</h4>
-			<p>BS, Economics, My University</p>
-			<ul>
-				<li>Award for best senior thesis</li>
-				<li>GPA: 3.8</li>
-			</ul>
-		</div>
-		<div id="footer">
-			<p>123 Your Street, Anytown, State 12345-6789 | Tel: (555) 555-5555</p>
-		</div>
+ <div id="header">
+	  
+<img id="duan" src="http://vignette3.wikia.nocookie.net/evchk/images/2/21/%E7%AB%AF%E5%82%B3%E5%AA%92_Logo.jpg/revision/latest?cb=20150830150330"/>
+<h6>端闻
+观点
+国际
+香港
+大陆
+台湾
+风物
+城市
+STYLE
+影像
+旅行</h6>
+<a id=shopping href="https://initiummall.com/?utm_source=initium&utm_medium=navbar&utm_campaign=initium_navbar">端mall购物</a>
+
+
+	</div>
+	<div class="left">
+	<h4>热门头条</h4>
+	<ol>
+<p>	<li>中华民国官媒、央视春晚⋯⋯这个笑话，我们想讲给台湾人听</li></p>
+<p><li>我参加了中国客人的马来西亚买房团</li></p>
+<p><li>张育轩：眼球央视春晚，嘲笑国家符号何以走红？</li></p>
+<p><li>你餐桌上的南非鲍鱼，背后竟是一场毒品、生态与渔业的战争</li></p>
+<p><li>香港 vs 台北：设一个熟食夜市到底有多难？</li></p>
+<p><li>读者来函：眼球中央春晚——戏谑一种名为“中华民国”的病态</li></p>
+<p><li>好奇、反感、冷淡：德媒看中国的十五年变奏曲</li></p>
+<p><li>中国VPN新禁令对用户到底意味著什么？</li></p>
+<p><li>一边要统战指标，另一边要现金补助，台湾赴陆创业泡沫有多大？</li></p>
+<p><li>东莞春困：告别流水线与夜总会之</li></p>
+</ol>
+	</div>
+	<div class="right">
+	<h1>极权下的困兽，你尝过这样的滋味吗？艾晓明评《见证中国独立纪录片》</h1>
+	<h3>他从墙外探视观看我们，这群在墙内手拿摄像机的人。</h3>
+	<h5>中山大学中文系教授、中国独立纪录片导演 艾晓明</h5>
+	<p>
+看文海有关中国独立纪录片的新著，想起比利时超现实主义画家马格利特（René François Ghislain Magritte）的一幅画，一群人在窗户外看着墙内的我们。在这个比喻里，文海似乎是站在外面的一员，而我们这些通常持摄像机的人成为被观看的对象。理论上和现实中，文海目前都处在相对自由的位置，他这本书，放在墙内，就不可能出版。</p>
+<p>墙内的我们——做中国独立纪录片的一族，尽管被封闭，却还像落在陷阱里一样不甘，困兽犹斗。这里，当然有着丰富的可以做纪录片的题材：地球上最广大而深厚的雾霾、最绚烂和多彩的水污染、最奇葩的化学添加组合食品，以及在苦难中忍辱负重的人民。还有端坐在电视中出席无穷会议的统治者，尽责敬业地驱逐艺术家和监控人们思想情操的员警便衣；哪一种不是在历史上、在很多国家都已绝种的极品？</p>
+<img id="tu"src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2017/02/bce7c09776a84f4a85c1facb823f635a.jpg?imageView2/1/w/1080/h/720/format/jpg">
+<ul>
+  <li>抗争在别处</li>
+  <p>被文海在书中讨论而且也给予很多鼓励的我，其实缺乏写书评的心态。现实纷乱突兀，心情芜杂难平。我常常觉得，自己的身份也是一团乱麻。文海在书中也选择了我的作品作为抗争一脉，而在生活中，我觉得自己更接近那个从家务中逃出的业余摄影师薇薇安．迈尔（Vivian Maie）。</p>
+  <li>从观察到界入，中国独立纪录片的见证人</li>
+  <p>文海的研究于我来说，有一些精神救赎的意味。一个人被孤立久后，就失去与外面的世界关联的兴趣。我的状态就是这样，我不想和人讨论，也不想再见观众。文明的世界令我自惭形秽，野蛮的世界令我愤怒——这就是困兽的状态。但我必须感谢文海和一群在自由的空间回望独立纪录片的友人，如为文海的书写序的曾金燕博士和香港中国独立纪录片研究会的志愿者们。
+文海的写作让我想到一个故事场景：那个海滩上的孩子，把搁浅的星鱼扔回到海里。文海选择了在中国被排斥、被禁止和受打压独立纪录片作者群，将之置于民主和自由的价值观里考察，高度肯定了他们的成就和影像语言的抗争性。</p>
+  <li>纪录片的制造互动关系</li>
+  <p>这本书包括六章，第一章〈决绝〉描述了从上个世纪九十年代开始的独立记录，重点讨论了胡杰和王兵见证历史和社会变迁的纪录片。第二章〈空间〉呈现了在北京、上海、南京以及云南出现的放映场所，讨论了如“中国独立影像展”、“云之南”等影展的波折以及与国外电影节的交流。第三章是社会抗争性的纪录片在内容边界上的拓展，重点阐述了如胡佳的《自由城的囚徒》（2007）、文海的《我们》（2008）、赵亮的《上访》（2009）等作品。</p>
+  <ul>
+
+	</div>
+	<div id="footer">
+<p>	关于我们
+ 
+公司新闻
+ 
+隐私政策
+ 
+联系我们
+ 
+服务协议
+ 
+版权声明
+ 
+广告政策
+ 
+加入我们
+ </p>
+ 
+ 
+ 
+</div>
 	</body>
-</html>
-  
+</html>   
+		
