--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="jamie.css" type="text/css" />
+    <link rel="stylesheet" type="text/css" href="jamie.css" />
     <title>homework 2</title>
 </head>
 
