--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ STYLE
   <ul>
 
 	</div>
-	<div id="footer">
+	<footer>
 <p>	关于我们
  
 公司新闻
@@ -77,8 +77,7 @@ STYLE
  </p>
  
  
- 
-</div>
+ <footer>
 	</body>
 </html>   
 		
