--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ STYLE
   <ul>
 
 	</div>
-	<footer>
+	<div class=footer>
 <p>	关于我们
  
 公司新闻
@@ -77,7 +77,7 @@ STYLE
  </p>
  
  
- <footer>
+ </div>
 	</body>
 </html>   
 		
