--- a/index.html
+++ b/index.html
@@ -2,11 +2,57 @@
 
 <head>
     <link rel="stylesheet" href="jamie.css" type="text/css" />
+    <script scr="jamie.js"></script>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <title>homework 2</title>
 </head>
 
 <body>
-    hi
+    <main>
+        <header id="app-header" class="app-header">
+
+            <div class="background-container">
+                <div id="background-back" class="background"></div>
+                <div id="background-front" class="background"></div>
+            </div>
+
+            <div class="header-content">
+                <div id="small-toolbar" class="app-toolbar">
+
+                    <div class="icon-button">
+                        <div class="icon">
+                            <i class="material-icons">menu</i>
+                        </div>
+                    </div>
+
+                    <div id="small-title" class="small-title">Some Title</div>
+                    <div class="icon-button">
+                        <div class="icon">
+                            <i class="material-icons">search</i>
+                        </div>
+                    </div>
+
+                    <div class="icon-button">
+                        <div class="icon">
+                            <i class="material-icons">more_vert</i>
+                        </div>
+                    </div>
+
+                </div>
+
+                <div id="large-toolbar" class="app-toolbar tall">
+                    <div id="large-title" class="large-title">Some Title</div>
+                </div>
+            </div>
+        </header>
+    </main>
     </hody>
 
 </html>
