--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 
     <link rel="stylesheet" href="jamie.css" type="text/css" />
-    <script scr="jamie.js"></script>
+
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
@@ -14,7 +14,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
     <link rel="stylesheet" type="text/css" href="jamie.css" />
-
+    <script src="jamie.js"></script>
     <title>homework 2</title>
 </head>
 
@@ -58,7 +58,41 @@
             </div>
         </header>
 
-        </hody>
+        <div class="row">
+            <div class="col-lg-4">
+                <a class="color-line" href="http://www.baidu.com/" target="_black">
+                    <div class="img-head">
+                        <img class="img-square" src="https://pbs.twimg.com/profile_images/702407143975211008/JNjujNj4.jpg" </div>
+                        <h3 class="img-word">
+                            "Once Upon a Time, There"
+                            <br data-owner="balabce-text"> "Came a Negative Rate..."
+                        </h3>
+                    </div>
+                </a>
+            </div>
+            <div class="col-lg-4">
+                <a class="color-line" href="http://www.baidu.com/" target="_black">
+                    <div class="img-head">
+                        <img class="img-square" src="https://pbs.twimg.com/profile_images/702407143975211008/JNjujNj4.jpg" </div>
+                        <h3 class="img-word">
+                            "Once Upon a Time, There"
+                            <br data-owner="balabce-text"> "Came a Negative Rate..."
+                        </h3>
+                    </div>
+                </a>
+            </div>
+            <div class="col-lg-4">
+                <a class="color-line" href="http://www.baidu.com/" target="_black">
+                    <div class="img-head">
+                        <img class="img-square" src="https://pbs.twimg.com/profile_images/702407143975211008/JNjujNj4.jpg" </div>
+                        <h3 class="img-word">
+                            "Once Upon a Time, There"
+                            <br data-owner="balabce-text"> "Came a Negative Rate..."
+                        </h3>
+                    </div>
+                </a>
+            </div>
+        </div>
 
         <div id="header">
 
