--- a/index.html
+++ b/index.html
@@ -15,21 +15,34 @@
 
     <link rel="stylesheet" type="text/css" href="jamie.css" />
     <script src="jamie.js"></script>
+    <script src="//production-assets.codepen.io/assets/common/stopExecutionOnTimeout-b2a7b3fe212eaa732349046d8416e00a9dec26eb7fd347590fbced3ab38af52e.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/TweenMax.min.js"></script>
+    <script src="//production-assets.codepen.io/assets/editor/live/console_runner-079c09a0e3b9ff743e39ee2d5637b9216b3545af0de366d4b9aad9dc87e26bfd.js"></script>
+    <script src="//production-assets.codepen.io/assets/editor/live/events_runner-73716630c22bbc8cff4bd0f07b135f00a0bdc5d14629260c3ec49e5606f98fdd.js"></script>
+    <script src="//production-assets.codepen.io/assets/editor/live/css_live_reload_init-2c0dc5167d60a5af3ee189d570b1835129687ea2a61bee3513dee3a50c115a77.js"></script>
+    <meta charset="UTF-8">
+    <meta name="robots" content="noindex">
+    <link rel="shortcut icon" type="image/x-icon" href="//production-assets.codepen.io/assets/favicon/favicon-8ea04875e70c4b0bb41da869e81236e54394d63638a1ef12fa558a4a835f1164.ico">
+    <link rel="mask-icon" type="" href="//production-assets.codepen.io/assets/favicon/logo-pin-f2d2b6d2c61838f7e76325261b7195c27224080bc099486ddd6dccb469b8e8e6.svg" color="#111">
+    <link rel="canonical" href="http://codepen.io/osublake/pen/NdEONL">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700,400italic|Material+Icons" rel="stylesheet">
+    <link rel="stylesheet prefetch" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+
     <title>homework 2</title>
 </head>
 
 <body>
 
     <main>
-        <header id="app-header" class="app-header">
+        <header id="app-header" class="app-header" style="box-shadow: rgba(0, 0, 0, 0) 0px 2px 5px 0px; transform: matrix(1, 0, 0, 1, 0, 0);">
 
             <div class="background-container">
-                <div id="background-back" class="background"></div>
-                <div id="background-front" class="background"></div>
+                <div id="background-back" class="background" style="transform: matrix(1, 0, 0, 1, 0, 0); visibility: hidden; opacity: 0;"></div>
+                <div id="background-front" class="background" style="transform: matrix(1, 0, 0, 1, 0, 0); visibility: inherit; opacity: 1;"></div>
             </div>
 
             <div class="header-content">
-                <div id="small-toolbar" class="app-toolbar">
+                <div id="small-toolbar" class="app-toolbar" style="transform: matrix(1, 0, 0, 1, 0, 0);">
 
                     <div class="icon-button">
                         <div class="icon">
@@ -37,7 +50,7 @@
                         </div>
                     </div>
 
-                    <div id="small-title" class="small-title">Some Title</div>
+                    <div id="small-title" class="small-title" style="visibility: hidden; opacity: 0;">Some Title</div>
                     <div class="icon-button">
                         <div class="icon">
                             <i class="material-icons">search</i>
@@ -53,7 +66,7 @@
                 </div>
 
                 <div id="large-toolbar" class="app-toolbar tall">
-                    <div id="large-title" class="large-title">Some Title</div>
+                    <div id="large-title" class="large-title" style="transform: matrix(1, 0, 0, 1, 0, 0); visibility: inherit; opacity: 1;">Some Title</div>
                 </div>
             </div>
         </header>
@@ -164,6 +177,7 @@
 
         </div>
     </main>
+
 </body>
 
 </html>
