--- a/index.html
+++ b/index.html
@@ -12,27 +12,13 @@
 
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-
-    <link rel="stylesheet" type="text/css" href="jamie.css" />
     <script src="jamie.js"></script>
-    <script src="//production-assets.codepen.io/assets/common/stopExecutionOnTimeout-b2a7b3fe212eaa732349046d8416e00a9dec26eb7fd347590fbced3ab38af52e.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/TweenMax.min.js"></script>
-    <script src="//production-assets.codepen.io/assets/editor/live/console_runner-079c09a0e3b9ff743e39ee2d5637b9216b3545af0de366d4b9aad9dc87e26bfd.js"></script>
-    <script src="//production-assets.codepen.io/assets/editor/live/events_runner-73716630c22bbc8cff4bd0f07b135f00a0bdc5d14629260c3ec49e5606f98fdd.js"></script>
-    <script src="//production-assets.codepen.io/assets/editor/live/css_live_reload_init-2c0dc5167d60a5af3ee189d570b1835129687ea2a61bee3513dee3a50c115a77.js"></script>
-    <meta charset="UTF-8">
-    <meta name="robots" content="noindex">
-    <link rel="shortcut icon" type="image/x-icon" href="//production-assets.codepen.io/assets/favicon/favicon-8ea04875e70c4b0bb41da869e81236e54394d63638a1ef12fa558a4a835f1164.ico">
-    <link rel="mask-icon" type="" href="//production-assets.codepen.io/assets/favicon/logo-pin-f2d2b6d2c61838f7e76325261b7195c27224080bc099486ddd6dccb469b8e8e6.svg" color="#111">
-    <link rel="canonical" href="http://codepen.io/osublake/pen/NdEONL">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700,400italic|Material+Icons" rel="stylesheet">
-    <link rel="stylesheet prefetch" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+
 
     <title>homework 2</title>
 </head>
 
 <body>
-
     <main>
         <header id="app-header" class="app-header" style="box-shadow: rgba(0, 0, 0, 0) 0px 2px 5px 0px; transform: matrix(1, 0, 0, 1, 0, 0);">
 
@@ -107,15 +93,7 @@
             </div>
         </div>
 
-        <div id="header">
 
-            <img id="duan" src="http://vignette3.wikia.nocookie.net/evchk/images/2/21/%E7%AB%AF%E5%82%B3%E5%AA%92_Logo.jpg/revision/latest?cb=20150830150330" />
-            <h6>端闻 观点 国际 香港 大陆 台湾 风物 城市 STYLE 影像 旅行
-            </h6>
-            <a id=shopping href="https://initiummall.com/?utm_source=initium&utm_medium=navbar&utm_campaign=initium_navbar">端mall购物</a> >>>>>>> origin/gh-pages
-
-
-        </div>
         <div class="left">
             <h4>热门头条</h4>
             <ol>
@@ -170,14 +148,18 @@
                 <ul>
 
         </div>
-        <div class=footer>
+        <footer>
+            <button type="button" class="btn btn-info"> <p class="pull-right"><a href="#">Back to top</a></p></button>
             <p> 关于我们 公司新闻 隐私政策 联系我们 服务协议 版权声明 广告政策 加入我们
             </p>
+        </footer>
 
 
-        </div>
+
+        <script src="//production-assets.codepen.io/assets/common/stopExecutionOnTimeout-b2a7b3fe212eaa732349046d8416e00a9dec26eb7fd347590fbced3ab38af52e.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/TweenMax.min.js"></script>
+
     </main>
-
 </body>
 
 </html>
