--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    <script src="jamie.js"></script>
+
+
 
 
     <title>homework 2</title>
@@ -54,59 +55,12 @@
             </div>
         </div>
     </header>
-    <div class="card">
-
-        <div class="card-title">Cu mei vide viris gloriatur, at populo eripuit sit</div>
-
-        <p>Bacon ipsum dolor amet turducken short ribs strip steak, cupim pastrami kielbasa sirloin doner drumstick pork belly meatloaf swine shank short loin bacon. Pastrami andouille bresaola spare ribs, jerky drumstick jowl kevin ground round bacon. Hamburger
-            filet mignon tongue pancetta ground round strip steak. Biltong boudin swine, pork chop pig tri-tip short loin shank alcatra kielbasa. Picanha fatback jowl, pastrami tri-tip chicken turkey. Spare ribs picanha alcatra kielbasa rump t-bone shankle
-            meatball landjaeger beef doner biltong fatback short ribs salami. Burgdoggen picanha frankfurter, brisket tongue pig beef ribs doner strip steak hamburger.</p>
-
-        <p>Capicola tri-tip landjaeger strip steak. Ham boudin pig kielbasa landjaeger prosciutto. Shank short ribs spare ribs ball tip salami alcatra. Prosciutto alcatra jerky flank meatball andouille rump bacon. Short loin shoulder tenderloin bresaola.
-            Bacon pastrami turkey ham drumstick tongue kevin meatloaf spare ribs pork belly. Alcatra meatloaf doner tail bresaola meatball ham hock cow.</p>
-
-        <p>Sausage andouille pork chop tri-tip. Ham beef ribs ball tip pork chop picanha biltong. Shoulder rump sirloin meatball ham hock. Flank pancetta ham kielbasa short ribs, leberkas hamburger. Ham hock bresaola ball tip chuck rump pork loin jowl brisket
-            swine tenderloin. Sirloin t-bone jowl ham pork belly leberkas kielbasa.</p>
-
-        <p>Tongue biltong tail capicola beef ribs sausage pig, meatloaf ball tip landjaeger t-bone shankle kielbasa chuck jerky. Tongue chicken ham, beef ribs pastrami meatball ham hock cow leberkas pig. Pork belly turducken sausage salami strip steak cupim
-            chicken chuck landjaeger t-bone bresaola capicola ribeye. Cow fatback filet mignon, turducken tri-tip cupim t-bone pastrami.</p>
-
-        <p>Tongue cow tenderloin pork filet mignon chicken spare ribs, sirloin strip steak pork chop tail turducken. Boudin tail meatloaf shankle leberkas chicken ball tip. Fatback salami ball tip short ribs, cow beef tenderloin venison tail ground round
-            jowl. Beef prosciutto turducken shank. Flank bacon sausage, porchetta tongue picanha pork chop tenderloin drumstick frankfurter beef fatback. Tenderloin biltong short loin, filet mignon tail brisket venison sausage andouille ham shank landjaeger
-            t-bone meatball.
-        </p>
-
-    </div>
-    <div class="card">
-
-        <div class="card-title">Cu mei vide viris gloriatur, at populo eripuit sit</div>
-
-        <p>Bacon ipsum dolor amet turducken short ribs strip steak, cupim pastrami kielbasa sirloin doner drumstick pork belly meatloaf swine shank short loin bacon. Pastrami andouille bresaola spare ribs, jerky drumstick jowl kevin ground round bacon. Hamburger
-            filet mignon tongue pancetta ground round strip steak. Biltong boudin swine, pork chop pig tri-tip short loin shank alcatra kielbasa. Picanha fatback jowl, pastrami tri-tip chicken turkey. Spare ribs picanha alcatra kielbasa rump t-bone shankle
-            meatball landjaeger beef doner biltong fatback short ribs salami. Burgdoggen picanha frankfurter, brisket tongue pig beef ribs doner strip steak hamburger.</p>
-
-        <p>Capicola tri-tip landjaeger strip steak. Ham boudin pig kielbasa landjaeger prosciutto. Shank short ribs spare ribs ball tip salami alcatra. Prosciutto alcatra jerky flank meatball andouille rump bacon. Short loin shoulder tenderloin bresaola.
-            Bacon pastrami turkey ham drumstick tongue kevin meatloaf spare ribs pork belly. Alcatra meatloaf doner tail bresaola meatball ham hock cow.</p>
-
-        <p>Sausage andouille pork chop tri-tip. Ham beef ribs ball tip pork chop picanha biltong. Shoulder rump sirloin meatball ham hock. Flank pancetta ham kielbasa short ribs, leberkas hamburger. Ham hock bresaola ball tip chuck rump pork loin jowl brisket
-            swine tenderloin. Sirloin t-bone jowl ham pork belly leberkas kielbasa.</p>
-
-        <p>Tongue biltong tail capicola beef ribs sausage pig, meatloaf ball tip landjaeger t-bone shankle kielbasa chuck jerky. Tongue chicken ham, beef ribs pastrami meatball ham hock cow leberkas pig. Pork belly turducken sausage salami strip steak cupim
-            chicken chuck landjaeger t-bone bresaola capicola ribeye. Cow fatback filet mignon, turducken tri-tip cupim t-bone pastrami.</p>
-
-        <p>Tongue cow tenderloin pork filet mignon chicken spare ribs, sirloin strip steak pork chop tail turducken. Boudin tail meatloaf shankle leberkas chicken ball tip. Fatback salami ball tip short ribs, cow beef tenderloin venison tail ground round
-            jowl. Beef prosciutto turducken shank. Flank bacon sausage, porchetta tongue picanha pork chop tenderloin drumstick frankfurter beef fatback. Tenderloin biltong short loin, filet mignon tail brisket venison sausage andouille ham shank landjaeger
-            t-bone meatball.
-        </p>
-
-    </div>
-
-
     <div class="row">
-        <div class="col-lg-4">
+        <div class="col-lg-3">
             <a class="color-line" href="http://www.baidu.com/" target="_black">
                 <div class="img-head">
                     <img class="img-square" src="https://pbs.twimg.com/profile_images/702407143975211008/JNjujNj4.jpg" </div>
+                    <br data-owner="balabce-text">
                     <h3 class="img-word">
                         "Once Upon a Time, There"
                         <br data-owner="balabce-text"> "Came a Negative Rate..."
@@ -114,10 +68,11 @@
                 </div>
             </a>
         </div>
-        <div class="col-lg-4">
+        <div class="col-lg-3">
             <a class="color-line" href="http://www.baidu.com/" target="_black">
                 <div class="img-head">
                     <img class="img-square" src="https://pbs.twimg.com/profile_images/702407143975211008/JNjujNj4.jpg" </div>
+                    <br data-owner="balabce-text">
                     <h3 class="img-word">
                         "Once Upon a Time, There"
                         <br data-owner="balabce-text"> "Came a Negative Rate..."
@@ -125,10 +80,23 @@
                 </div>
             </a>
         </div>
-        <div class="col-lg-4">
+        <div class="col-lg-3">
             <a class="color-line" href="http://www.baidu.com/" target="_black">
                 <div class="img-head">
                     <img class="img-square" src="https://pbs.twimg.com/profile_images/702407143975211008/JNjujNj4.jpg" </div>
+                    <br data-owner="balabce-text">
+                    <h3 class="img-word">
+                        "Once Upon a Time, There"
+                        <br data-owner="balabce-text"> "Came a Negative Rate..."
+                    </h3>
+                </div>
+            </a>
+        </div>
+        <div class="col-lg-3">
+            <a class="color-line" href="http://www.baidu.com/" target="_black">
+                <div class="img-head">
+                    <img class="img-square" src="https://pbs.twimg.com/profile_images/702407143975211008/JNjujNj4.jpg" </div>
+                    <br data-owner="balabce-text">
                     <h3 class="img-word">
                         "Once Upon a Time, There"
                         <br data-owner="balabce-text"> "Came a Negative Rate..."
@@ -138,6 +106,29 @@
         </div>
     </div>
 
+    <div class="card">
+
+        <div class="card-title">Cu mei vide viris gloriatur, at populo eripuit sit</div>
+
+        <p>Bacon ipsum dolor amet turducken short ribs strip steak, cupim pastrami kielbasa sirloin doner drumstick pork belly meatloaf swine shank short loin bacon. Pastrami andouille bresaola spare ribs, jerky drumstick jowl kevin ground round bacon. Hamburger
+            filet mignon tongue pancetta ground round strip steak. Biltong boudin swine, pork chop pig tri-tip short loin shank alcatra kielbasa. Picanha fatback jowl, pastrami tri-tip chicken turkey. Spare ribs picanha alcatra kielbasa rump t-bone shankle
+            meatball landjaeger beef doner biltong fatback short ribs salami. Burgdoggen picanha frankfurter, brisket tongue pig beef ribs doner strip steak hamburger.</p>
+
+        <p>Capicola tri-tip landjaeger strip steak. Ham boudin pig kielbasa landjaeger prosciutto. Shank short ribs spare ribs ball tip salami alcatra. Prosciutto alcatra jerky flank meatball andouille rump bacon. Short loin shoulder tenderloin bresaola.
+            Bacon pastrami turkey ham drumstick tongue kevin meatloaf spare ribs pork belly. Alcatra meatloaf doner tail bresaola meatball ham hock cow.</p>
+
+        <p>Sausage andouille pork chop tri-tip. Ham beef ribs ball tip pork chop picanha biltong. Shoulder rump sirloin meatball ham hock. Flank pancetta ham kielbasa short ribs, leberkas hamburger. Ham hock bresaola ball tip chuck rump pork loin jowl brisket
+            swine tenderloin. Sirloin t-bone jowl ham pork belly leberkas kielbasa.</p>
+
+        <p>Tongue biltong tail capicola beef ribs sausage pig, meatloaf ball tip landjaeger t-bone shankle kielbasa chuck jerky. Tongue chicken ham, beef ribs pastrami meatball ham hock cow leberkas pig. Pork belly turducken sausage salami strip steak cupim
+            chicken chuck landjaeger t-bone bresaola capicola ribeye. Cow fatback filet mignon, turducken tri-tip cupim t-bone pastrami.</p>
+
+        <p>Tongue cow tenderloin pork filet mignon chicken spare ribs, sirloin strip steak pork chop tail turducken. Boudin tail meatloaf shankle leberkas chicken ball tip. Fatback salami ball tip short ribs, cow beef tenderloin venison tail ground round
+            jowl. Beef prosciutto turducken shank. Flank bacon sausage, porchetta tongue picanha pork chop tenderloin drumstick frankfurter beef fatback. Tenderloin biltong short loin, filet mignon tail brisket venison sausage andouille ham shank landjaeger
+            t-bone meatball.
+        </p>
+
+    </div>
 
     <div class="left">
         <h4>热门头条</h4>
@@ -194,16 +185,13 @@
 
     </div>
     <footer>
-        <button type="button" class="btn btn-info"> <p class="pull-right"><a href="#">Back to top</a></p></button>
-        <p> 关于我们 公司新闻 隐私政策 联系我们 服务协议 版权声明 广告政策 加入我们
-        </p>
+        <p class="pull-right"><button type="button" class="btn btn-info"> <a href="#">Back to top</a></button></p>
+
     </footer>
-
-
-
     <script src="//production-assets.codepen.io/assets/common/stopExecutionOnTimeout-b2a7b3fe212eaa732349046d8416e00a9dec26eb7fd347590fbced3ab38af52e.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/TweenMax.min.js"></script>
-
+    <script src="jamie.js">
+    </script>
 </main>
 </body>
 
