--- a/index.html
+++ b/index.html
@@ -26,85 +26,87 @@
             <div id="background-front" class="background"></div>
         </div>
 
-        <div class="header-content">
-            <div id="small-toolbar" class="app-toolbar">
 
-                <div class="icon-button">
-                    <div class="icon">
-                        <i class="material-icons">menu</i>
-                    </div>
+        <div id="small-toolbar" class="app-toolbar">
+
+            <div class="icon-button">
+                <div class="icon">
+                    <i class="material-icons">menu</i>
                 </div>
-
-                <div id="small-title" class="small-title">Some Title</div>
-                <div class="icon-button">
-                    <div class="icon">
-                        <i class="material-icons">search</i>
-                    </div>
-                </div>
-
-                <div class="icon-button">
-                    <div class="icon">
-                        <i class="material-icons">more_vert</i>
-                    </div>
-                </div>
-
             </div>
 
-            <div id="large-toolbar" class="app-toolbar tall">
-                <div id="large-title" class="large-title">Some Title</div>
+            <div id="small-title" class="small-title">Some Title</div>
+            <div class="icon-button">
+                <div class="icon">
+                    <i class="material-icons">search</i>
+                </div>
             </div>
+
+            <div class="icon-button">
+                <div class="icon">
+                    <i class="material-icons">more_vert</i>
+                </div>
+            </div>
+
+        </div>
+
+        <div id="large-toolbar" class="app-toolbar tall">
+            <div id="large-title" class="large-title">Some Title</div>
+        </div>
         </div>
     </header>
+
     <div class="row">
-        <div class="col-lg-3">
+        <div class="col-md-6 col-lg-3">
             <a class="color-line" href="http://www.baidu.com/" target="_black">
-                <div class="img-head">
+                <span class="img-head">
                     <img class="img-square" src="https://pbs.twimg.com/profile_images/702407143975211008/JNjujNj4.jpg" </div>
                     <br data-owner="balabce-text">
                     <h3 class="img-word">
                         "Once Upon a Time, There"
                         <br data-owner="balabce-text"> "Came a Negative Rate..."
                     </h3>
-                </div>
+                </span>
             </a>
         </div>
-        <div class="col-lg-3">
+        <div class="col-md-6 col-lg-3">
             <a class="color-line" href="http://www.baidu.com/" target="_black">
-                <div class="img-head">
+                <span class="img-head">
                     <img class="img-square" src="https://pbs.twimg.com/profile_images/702407143975211008/JNjujNj4.jpg" </div>
                     <br data-owner="balabce-text">
                     <h3 class="img-word">
                         "Once Upon a Time, There"
                         <br data-owner="balabce-text"> "Came a Negative Rate..."
                     </h3>
-                </div>
+                </span>
             </a>
         </div>
-        <div class="col-lg-3">
+        <div class="col-md-6 col-lg-3">
             <a class="color-line" href="http://www.baidu.com/" target="_black">
-                <div class="img-head">
+                <span class="img-head">
                     <img class="img-square" src="https://pbs.twimg.com/profile_images/702407143975211008/JNjujNj4.jpg" </div>
                     <br data-owner="balabce-text">
                     <h3 class="img-word">
                         "Once Upon a Time, There"
                         <br data-owner="balabce-text"> "Came a Negative Rate..."
                     </h3>
-                </div>
+                </span>
             </a>
         </div>
-        <div class="col-lg-3">
+        <div class="col-md-6 col-lg-3">
             <a class="color-line" href="http://www.baidu.com/" target="_black">
-                <div class="img-head">
+                <span class="img-head">
                     <img class="img-square" src="https://pbs.twimg.com/profile_images/702407143975211008/JNjujNj4.jpg" </div>
                     <br data-owner="balabce-text">
                     <h3 class="img-word">
                         "Once Upon a Time, There"
                         <br data-owner="balabce-text"> "Came a Negative Rate..."
                     </h3>
-                </div>
+                </span>
             </a>
         </div>
     </div>
+
 
     <div class="card">
 
@@ -185,7 +187,9 @@
 
     </div>
     <footer>
-        <p class="pull-right"><button type="button" class="btn btn-info"> <a href="#">Back to top</a></button></p>
+        <div class="pull-right">
+            <p> <a href="#" role="button"> Back to top</a></p>
+        </div>
 
     </footer>
     <script src="//production-assets.codepen.io/assets/common/stopExecutionOnTimeout-b2a7b3fe212eaa732349046d8416e00a9dec26eb7fd347590fbced3ab38af52e.js"></script>
