--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </div>
     <div class="subline"></div>
     <div class="row">
-        <div class="col-md-6 col-lg-4" style="margin-left: 100px;margin-right:10px;">
+        <div class="col-md-6 col-lg-4">
             <a class="color-line" href="http://www.baidu.com/" target="_black">
                 <span class="img-head">
                     <img class="img-square" src="https://pbs.twimg.com/profile_images/702407143975211008/JNjujNj4.jpg" </div>
@@ -75,7 +75,7 @@
                 </span>
             </a>
         </div>
-        <div class="col-md-6 col-lg-4" style="margin-left:10px;margin-right:1px;">
+        <div class="col-md-6 col-lg-4">
             <a class="color-line" href="http://www.baidu.com/" target="_black">
                 <span class="img-head">
                     <img class="img-square" src="https://pbs.twimg.com/profile_images/702407143975211008/JNjujNj4.jpg" </div>
@@ -88,7 +88,7 @@
             </a>
         </div>
 
-        <div class="col-md-6 col-lg-4" style="margin-right: 100px;margin-left:10px;">
+        <div class="col-md-6 col-lg-4">
             <a class="color-line" href="http://www.baidu.com/" target="_black">
                 <span class="img-head">
                     <img class="img-square" src="https://pbs.twimg.com/profile_images/702407143975211008/JNjujNj4.jpg" </div>
