--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
-
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="jamie.css" type="text/css" />
     <link rel="stylesheet" href="tt.css" type="text/css" />
+
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
@@ -11,11 +15,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
     <!-- Latest compiled and minified JavaScript -->
-    <script async="" src="https://www.google-analytics.com/analytics.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
-    <!-- Place this tag in your head or just before your close body tag. -->
-    <script async="" defer="" src="https://buttons.github.io/buttons.js"></script>
 
     <title>Jamie's homework 2</title>
 </head>
@@ -157,12 +158,17 @@
             </div>
         </div>
     </div>
+    <div class="container">
+        <div class="back-to-top">
+            <a href="#" class="cta--secondary">Back To Top </a><i class="glyphicon glyphicon-menu-up"></i>
+        </div>
+    </div>
     <footer>
         <p>footer</p>
-        <div class="pull-right">
 
-            <p> <a href="#" role="button"> Back to top</a></p>
-        </div>
+
+
+
 
     </footer>
 
@@ -184,7 +190,9 @@
         });
     </script>
 
+
 </main>
 </body>
+<span class="gr__tooltip"><span class="gr__tooltip-content"></span><i class="gr__tooltip-logo"></i><span class="gr__triangle"></span></span>
 
 </html>
