--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html lang="en">
+<html>
 
 <head>
     <link rel="stylesheet" href="jamie.css" type="text/css" />
@@ -156,7 +156,7 @@
     </div>
     <div class="container">
         <div class="back-to-top">
-            <a href="#" class="cta--secondary">Back To Top </a><i class="glyphicon glyphicon-menu-up"></i>
+            <a href="#" class="cta--secondary">Back To Top <i class="glyphicon glyphicon-menu-up"></i></a>
         </div>
     </div>
     <footer>
