--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </div>
         <div class="subline"></div>
         <div class="row">
-            <div class="col-md-6 col-lg-3" style="margin-left:0%">
+            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3" style="margin-left:0%">
                 <a class="color-line" href="http://www.baidu.com/" target="_black">
                     <span class="img-head">
                     <img class="img-square" src="https://pbs.twimg.com/profile_images/702407143975211008/JNjujNj4.jpg" </div>
@@ -75,7 +75,7 @@
                 </span>
                 </a>
             </div>
-            <div class="col-md-6 col-lg-3">
+            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3">
                 <a class="color-line" href="http://www.baidu.com/" target="_black">
                     <span class="img-head">
                     <img class="img-square" src="https://pbs.twimg.com/profile_images/702407143975211008/JNjujNj4.jpg" </div>
@@ -87,7 +87,7 @@
                 </span>
                 </a>
             </div>
-            <div class="col-md-6 col-lg-3">
+            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3">
                 <a class="color-line" href="http://www.baidu.com/" target="_black">
                     <span class="img-head">
                     <img class="img-square" src="https://pbs.twimg.com/profile_images/702407143975211008/JNjujNj4.jpg" </div>
@@ -100,7 +100,7 @@
                 </a>
             </div>
 
-            <div class="col-md-6 col-lg-3" style="margin-right:0%">
+            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3" style="margin-right:0%">
                 <a class="color-line" href="http://www.baidu.com/" target="_black">
                     <span class="img-head">
                     <img class="img-square" src="https://pbs.twimg.com/profile_images/702407143975211008/JNjujNj4.jpg" </div>
