--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3" style="margin-right:0%">
                         <a class="color-line" href="http://initiumlab.com/blog/20160903-legco-seats-analysis/" target="_black">
                             <div class="kuang">
-                                <img class="img-square" src="http://media.istockphoto.com/vectors/cube-assembling-from-blocks-vector-id469295174?k=6&m=469295174&s=170667a&w=0&h=R-M6PDRW05YnK1bz8i1GDnpR_bBVUJKPqEDQLf-P8tk="> </span>
+                                <img class="img-square" src="http://media.istockphoto.com/vectors/cube-assembling-from-blocks-vector-id469295174?k=6&m=469295174&s=170667a&w=0&h=R-M6PDRW05YnK1bz8i1GDnpR_bBVUJKPqEDQLf-P8tk=">
                                 <h3 class="img-word1">
                                     "Assembling"--When small ones grouped into large ones, the trend may change >></h3>
                             </div>
@@ -157,36 +157,36 @@
                     <a href="# " class="cta--secondary ">Back To Top <i class="glyphicon glyphicon-menu-up "></i></a>
                 </div>
             </div>
+            </mainly>
+            <footer>
+                <p>footer</p>
+
+
+
+
+
+            </footer>
+
+            <script src="//production-assets.codepen.io/assets/common/stopExecutionOnTimeout-b2a7b3fe212eaa732349046d8416e00a9dec26eb7fd347590fbced3ab38af52e.js "></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/TweenMax.min.js "></script>
+            <script src="jamie.js "></script>
+            <script src="//production-assets.codepen.io/assets/common/stopExecutionOnTimeout-b2a7b3fe212eaa732349046d8416e00a9dec26eb7fd347590fbced3ab38af52e.js "></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js "></script>
+            <script src="tricker.js ">
+            </script>
+            <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js "></script>
+            <script src="mm.js "></script>
+            <script src="tt.js "></script>
+            <script>
+                $(window).load(function() {
+                    $(".twentytwenty-container ").twentytwenty({
+                        default_offset_pct: 0.7
+                    });
+                });
+            </script>
+
+
     </main>
-    <footer>
-        <p>footer</p>
-
-
-
-
-
-    </footer>
-
-    <script src="//production-assets.codepen.io/assets/common/stopExecutionOnTimeout-b2a7b3fe212eaa732349046d8416e00a9dec26eb7fd347590fbced3ab38af52e.js "></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/TweenMax.min.js "></script>
-    <script src="jamie.js "></script>
-    <script src="//production-assets.codepen.io/assets/common/stopExecutionOnTimeout-b2a7b3fe212eaa732349046d8416e00a9dec26eb7fd347590fbced3ab38af52e.js "></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js "></script>
-    <script src="tricker.js ">
-    </script>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js "></script>
-    <script src="mm.js "></script>
-    <script src="tt.js "></script>
-    <script>
-        $(window).load(function() {
-            $(".twentytwenty-container ").twentytwenty({
-                default_offset_pct: 0.7
-            });
-        });
-    </script>
-
-
-
 </body>
 
 <span class="gr__tooltip "><span class="gr__tooltip-content "></span><i class="gr__tooltip-logo "></i><span class="gr__triangle "></span></span>
