--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@
                 <div class="twentytwenty-wrapper ">
                     <div class="twentytwenty-container " style="height: 334px; ">
                         <div class="put-center ">
-                            <img src="http://a57.foxnews.com/media2.foxnews.com/BrightCove/694940094001/2016/05/13/0/0/694940094001_4892210582001_2558ef5b-a852-4f3b-a53f-822f5e43ba3c.jpg?ve=1 " class="twentytwenty-before " style="width:100%; height:auto ">
-                            <img src="http://a57.foxnews.com/media2.foxnews.com/BrightCove/694940094001/2016/11/14/0/0/694940094001_5210237860001_Congress-continues-investigations-into-Hillary-Clinton.jpg?ve=1 " class="twentytwenty-after " style="width:100%;
+                            <img src="http://i2.cdn.turner.com/cnnnext/dam/assets/170110213349-02-obama-slider-2016-super-169.jpg" class="twentytwenty-before " style="width:100%; height:auto; position:100% 97%">
+                            <img src="https://timedotcom.files.wordpress.com/2015/01/trump.jpg " class="twentytwenty-after " style="width:100%;
                 height:auto ">
                             <div class="twentytwenty-overlay ">
                                 <div class="twentytwenty-before-label "></div>
