--- a/index.html
+++ b/index.html
@@ -130,78 +130,81 @@
                 <div class="row">
                     <div class="col-md-7">
                         <h2 class="card-title">
-                            Headline Numbers Can Mislead With Unfair Comparisons
+                            Headline Numbers Can Mislead With Unfair Comparisons</h2>
 
-                            <p>The December jobs report: with estimated payroll growth of 156,000 and accelerating wage gains -- marks the last full month of what has been a pretty impressive eight-year performance. Despite coming to power in the middle
-                                of the worst recession since the 1930s, Obama has presided over the creation of more than 11 million jobs and a 3.1-percentage-point decline in the unemployment rate.</p>
+                        <p>The December jobs report: with estimated payroll growth of 156,000 and accelerating wage gains -- marks the last full month of what has been a pretty impressive eight-year performance. Despite coming to power in the middle of the
+                            worst recession since the 1930s, Obama has presided over the creation of more than 11 million jobs and a 3.1-percentage-point decline in the unemployment rate.</p>
 
-                            <p>But how does that stack up against other presidencies? Comparisons aren't easy. For one, headline numbers can mislead: The unemployment rate misses people who have stopped looking for work or are stuck in part-time jobs --
-                                forms of labor-market slack that, as Trump has noted, have been acute in recent years. It would thus be helpful to use a measure that takes these things into account.</p>
+                        <p>But how does that stack up against other presidencies? Comparisons aren't easy. For one, headline numbers can mislead: The unemployment rate misses people who have stopped looking for work or are stuck in part-time jobs -- forms
+                            of labor-market slack that, as Trump has noted, have been acute in recent years. It would thus be helpful to use a measure that takes these things into account.</p>
 
-                            <p>One candidate is the employment gap. It measures how far the U.S. is from full employment, the point at which unemployment, part-time work and labor-market participation are all at levels that history and analysis suggest are
-                                desirable. Borrowing a method developed by economists Andrew Levin and David Blanchflower, I calculated the employment gap going back to 1955 -- enough to cover the past 10 presidencies. The chart is on the right side.</p>
+                        <p>One candidate is the employment gap. It measures how far the U.S. is from full employment, the point at which unemployment, part-time work and labor-market participation are all at levels that history and analysis suggest are desirable.
+                            Borrowing a method developed by economists Andrew Levin and David Blanchflower, I calculated the employment gap going back to 1955 -- enough to cover the past 10 presidencies. The chart is on the right side.</p>
 
                     </div>
                     <div class="col-md-5">
                         <img class="EG" src="picture/EG.png">
-                        <a class="view" href="https://www.bloomberg.com/view/articles/2017-01-06/obama-s-jobs-legacy-in-one-chart" target="_black"> <i class="glyphicon glyphicon-saved"></i>
-                            <p> Read the original page</P>
+                        <a class="view" href="https://www.bloomberg.com/view/articles/2017-01-06/obama-s-jobs-legacy-in-one-chart" target="_black">
+                            <p><i class="glyphicon glyphicon-saved"></i> Read the original page</p>
                         </a>
                     </div>
 
                 </div>
+            </div>
 
 
-                <div class="twentytwenty-wrapper ">
-                    <div class="twentytwenty-container " style="height: 334px; ">
-                        <div class="put-center ">
-                            <img src="http://i2.cdn.turner.com/cnnnext/dam/assets/170110213349-02-obama-slider-2016-super-169.jpg" class="twentytwenty-before " style="width:100%; height:auto; position:100% 97%">
-                            <img src="https://timedotcom.files.wordpress.com/2015/01/trump.jpg " class="twentytwenty-after " style="width:100%;
+            <div class="twentytwenty-wrapper ">
+                <div class="twentytwenty-container " style="height: 334px; ">
+                    <div class="put-center ">
+                        <img src="http://i2.cdn.turner.com/cnnnext/dam/assets/170110213349-02-obama-slider-2016-super-169.jpg" class="twentytwenty-before " style="width:100%; height:auto; position:100% 97%">
+                        <img src="https://timedotcom.files.wordpress.com/2015/01/trump.jpg " class="twentytwenty-after " style="width:100%;
                 height:auto ">
-                            <div class="twentytwenty-overlay ">
-                                <div class="twentytwenty-before-label "></div>
-                                <div class="twentytwenty-after-label "></div>
-                            </div>
+                        <div class="twentytwenty-overlay ">
+                            <div class="twentytwenty-before-label "></div>
+                            <div class="twentytwenty-after-label "></div>
                         </div>
-                        <div class="twentytwenty-handle " style="left: 396.656px; "><span class="twentytwenty-left-arrow "></span><span class="twentytwenty-right-arrow "></span></div>
                     </div>
+                    <div class="twentytwenty-handle " style="left: 396.656px; "><span class="twentytwenty-left-arrow "></span><span class="twentytwenty-right-arrow "></span></div>
                 </div>
             </div>
-            <div class="container ">
-                <div class="back-to-top ">
-                    <a href="# " class="cta--secondary ">Back To Top <i class="glyphicon glyphicon-menu-up "></i></a>
-                </div>
+        </div>
+        <div class="container ">
+            <div class="back-to-top ">
+                <a href="# " class="cta--secondary ">Back To Top <i class="glyphicon glyphicon-menu-up "></i></a>
             </div>
-            </mainly>
-            <footer>
-                <p>footer</p>
-
-
-
-
-
-            </footer>
-
-            <script src="//production-assets.codepen.io/assets/common/stopExecutionOnTimeout-b2a7b3fe212eaa732349046d8416e00a9dec26eb7fd347590fbced3ab38af52e.js "></script>
-            <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/TweenMax.min.js "></script>
-            <script src="jamie.js "></script>
-            <script src="//production-assets.codepen.io/assets/common/stopExecutionOnTimeout-b2a7b3fe212eaa732349046d8416e00a9dec26eb7fd347590fbced3ab38af52e.js "></script>
-            <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js "></script>
-            <script src="tricker.js ">
-            </script>
-            <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js "></script>
-            <script src="mm.js "></script>
-            <script src="tt.js "></script>
-            <script>
-                $(window).load(function() {
-                    $(".twentytwenty-container ").twentytwenty({
-                        default_offset_pct: 0.7
-                    });
-                });
-            </script>
-
-
+        </div>
+        </mainly>
     </main>
+
+    <footer>
+        <p>footer</p>
+
+
+
+
+
+    </footer>
+
+    <script src="//production-assets.codepen.io/assets/common/stopExecutionOnTimeout-b2a7b3fe212eaa732349046d8416e00a9dec26eb7fd347590fbced3ab38af52e.js "></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/TweenMax.min.js "></script>
+    <script src="jamie.js "></script>
+    <script src="//production-assets.codepen.io/assets/common/stopExecutionOnTimeout-b2a7b3fe212eaa732349046d8416e00a9dec26eb7fd347590fbced3ab38af52e.js "></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js "></script>
+    <script src="tricker.js ">
+    </script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js "></script>
+    <script src="mm.js "></script>
+    <script src="tt.js "></script>
+    <script>
+        $(window).load(function() {
+            $(".twentytwenty-container ").twentytwenty({
+                default_offset_pct: 0.7
+            });
+        });
+    </script>
+
+
+
 </body>
 
 <span class="gr__tooltip "><span class="gr__tooltip-content "></span><i class="gr__tooltip-logo "></i><span class="gr__triangle "></span></span>
