--- a/index.html
+++ b/index.html
@@ -167,44 +167,69 @@
                     <div class="twentytwenty-handle " style="left: 396.656px; "><span class="twentytwenty-left-arrow "></span><span class="twentytwenty-right-arrow "></span></div>
                 </div>
             </div>
-        </div>
-        <div class="container ">
-            <div class="back-to-top ">
-                <a href="# " class="cta--secondary ">Back To Top <i class="glyphicon glyphicon-menu-up "></i></a>
+
+            <div class="card ">
+                <div class="row">
+                    <div class="col-md-5">
+                        <img class="SD" src="picture/SD.png">
+                        <br>
+                        <img class="SD" src="https://i.kinja-img.com/gawker-media/image/upload/s--pyck_PzR--/c_scale,f_auto,fl_progressive,q_80,w_800/cwvtyje5ye3txwldpgg0.jpg">
+                        <a class="view" href="https://blog.heapanalytics.com/how-to-lie-with-data-visualization/" target="_black">
+                            <p><i class="glyphicon glyphicon-saved"></i> Read the original page</p>
+                        </a>
+                    </div>
+                    <div class="col-md-7">
+                        <h2 class="card-title">
+                            Truncated Y-Axis</h2>
+
+                        <p>One of the easiest ways to misrepresent your data is by messing with the y-axis of a bar graph, line graph, or scatter plot. In most cases, the y-axis ranges from 0 to a maximum value that encompasses the range of the data. However,
+                            sometimes we change the range to better highlight the differences. Taken to an extreme, this technique can make differences in data seem much larger than they are.</p>
+
+                        <p>Let’s see how this works in practice. The two graphs left show the exact same data, but use different scales for the y-axis:</p>
+                        <p>On the left, we’ve constrained the y-axis to range from 3.140% to 3.154%. Doing so makes it look like interest rates are skyrocketing! At a glance, the bar sizes imply that rates in 2012 are several times higher than those in 2008.
+                            But displaying the data with a zero-baseline y-axis tells a more accurate picture, where interest rates are staying static.</p>
+                    </div>
+
+
+                </div>
+            </div>
+            <div class="container ">
+                <div class="back-to-top ">
+                    <a href="# " class="cta--secondary ">Back To Top <i class="glyphicon glyphicon-menu-up "></i></a>
+                </div>
             </div>
         </div>
-        </mainly>
-    </main>
 
-    <footer>
-        <p>footer</p>
 
+        <footer>
+            <p>footer</p>
 
 
 
 
-    </footer>
 
-    <script src="//production-assets.codepen.io/assets/common/stopExecutionOnTimeout-b2a7b3fe212eaa732349046d8416e00a9dec26eb7fd347590fbced3ab38af52e.js "></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/TweenMax.min.js "></script>
-    <script src="jamie.js "></script>
-    <script src="//production-assets.codepen.io/assets/common/stopExecutionOnTimeout-b2a7b3fe212eaa732349046d8416e00a9dec26eb7fd347590fbced3ab38af52e.js "></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js "></script>
-    <script src="tricker.js ">
-    </script>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js "></script>
-    <script src="mm.js "></script>
-    <script src="tt.js "></script>
-    <script>
-        $(window).load(function() {
-            $(".twentytwenty-container ").twentytwenty({
-                default_offset_pct: 0.7
+        </footer>
+
+        <script src="//production-assets.codepen.io/assets/common/stopExecutionOnTimeout-b2a7b3fe212eaa732349046d8416e00a9dec26eb7fd347590fbced3ab38af52e.js "></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/TweenMax.min.js "></script>
+        <script src="jamie.js "></script>
+        <script src="//production-assets.codepen.io/assets/common/stopExecutionOnTimeout-b2a7b3fe212eaa732349046d8416e00a9dec26eb7fd347590fbced3ab38af52e.js "></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js "></script>
+        <script src="tricker.js ">
+        </script>
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js "></script>
+        <script src="mm.js "></script>
+        <script src="tt.js "></script>
+        <script>
+            $(window).load(function() {
+                $(".twentytwenty-container ").twentytwenty({
+                    default_offset_pct: 0.7
+                });
             });
-        });
-    </script>
+        </script>
 
 
-
+    </main>
 </body>
 
 <span class="gr__tooltip "><span class="gr__tooltip-content "></span><i class="gr__tooltip-logo "></i><span class="gr__triangle "></span></span>
