--- a/index.html
+++ b/index.html
@@ -170,8 +170,8 @@
             <div class="card ">
                 <div class="row">
                     <div class="col-md-5">
-                        <img class="SD" src="picture/SS.png">
-                        <a class="view" href="https://blog.heapanalytics.com/how-to-lie-with-data-visualization/" target="_black">
+                        <img class="SS" src="picture/SS.png">
+                        <a class="view" href="https://www.statisticsdonewrong.com/regression.html" target="_black">
                             <p><i class="glyphicon glyphicon-saved"></i> Read the original page</p>
                         </a>
                     </div>
