--- a/index.html
+++ b/index.html
@@ -216,12 +216,104 @@
                     </div>
                 </div>
             </div>
-            <div class="container ">
-                <div class="back-to-top ">
-                    <a href="# " class="cta--secondary ">Back To Top <i class="glyphicon glyphicon-menu-up "></i></a>
+        </div>
+        <div class="BG">
+
+            <div class="Boverlay-container">
+                <div class="Bcontainer2">
+                    <div class="Boverlay-content">
+                        <h1>More Visualizations that Make No Sense</h1>
+                    </div>
                 </div>
             </div>
         </div>
+        <div class="mainly">
+            <div class="other">
+
+
+                <table class="table table-hover">
+                    <tr class="warning">
+                        <div class="row">
+                            <div class="col-sm-2">
+                                <td>
+                                    <p class="txt-1">
+                                        Too Many Variables
+                                    </p>
+                                </td>
+                            </div>
+                            <div class="col-sm-6">
+                                <td>
+                                    <p class="txt-bold">
+                                        Can you figure out what’s going on in this heat map? Neither can we. There are so many layers of information piled on top of each other, and hues so close together they’re totally indecipherable.
+                                    </p>
+                                </td>
+                            </div>
+                            <div class="col-sm-4">
+                                <td>
+                                    <img src="picture/us.jpg" class="img-rounded" style="width: 100px;height: 100px">
+                                </td>
+                            </div>
+                    </tr>
+                    <tr>
+                        <div class="row">
+                            <div class="col-sm-2">
+                                <td>
+                                    <p class="txt-1">
+                                        Meaningless Designs
+                                    </p>
+                                </td>
+                            </div>
+
+                            <div class="col-sm-4">
+                                <td>
+                                    <img src="picture/poop.jpg" class="img-rounded" style="width: 100px;height: 100px">
+                                </td>
+                            </div>
+                            <div class="col-sm-6">
+                                <td>
+                                    <p class="txt-bold">
+                                        There’s this graphic on poop.Besides the multi-color gross-out factor, there isn’t any reason to put a big turd on this page. It isn’t a pie chart. It isn’t an area chart.
+                                    </p>
+                                </td>
+                            </div>
+                    </tr>
+                    <tr class="success">
+                        <div class="row">
+                            <div class="col-sm-2">
+                                <td>
+                                    <p class="txt-1">
+                                        Wrong Choice
+                                    </p>
+                                </td>
+                            </div>
+                            <div class="col-sm-6">
+                                <td>
+                                    <p class="txt-bold">
+                                        The intention there was to show how many features a given Microsoft Word version has. The pie chart, on the other hand, shows the proportion of features in a particular version as a percentage of the total features in all versions.
+                                    </p>
+                                </td>
+                            </div>
+                            <div class="col-sm-4">
+                                <td>
+                                    <img src="picture/2.jpg" class="img-rounded" style="width: 100px;height: 100px">
+                                </td>
+                            </div>
+                    </tr>
+
+
+                </table>
+                </div>
+                <img src="/assets/images/joinus/intern1.jpg" class="img-rounded"></div>
+                </div>
+                <div class="container ">
+                    <div class="back-to-top ">
+                        <a href="# " class="cta--secondary ">Back To Top <i class="glyphicon glyphicon-menu-up "></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
 
 
         <footer>
