--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                         </div>
                         <div class="col-sm-5">
                             <td>
-                                <img src="picture/us.jpg" class="img-rounded" style="width: 300px;height: 300px;display:block;margin-right: auto;margin-left: auto">
+                                <img src="picture/us.jpg" class="img-rounded" style="width: 300px;height: auto;display:block;margin-right: auto;margin-left: auto">
                             </td>
                         </div>
                     </div>
@@ -264,17 +264,16 @@
                                 </p>
                             </td>
                         </div>
-
-                        <div class="col-sm-4">
-                            <td>
-                                <img src="picture/poop.jpg" class="img-rounded" style="width: 300px;height: 300px;display:block;margin-right: auto;margin-left: auto">
-                            </td>
-                        </div>
                         <div class="col-sm-5">
                             <td>
                                 <p class="txt-bold">
                                     There’s this graphic on poop.Besides the multi-color gross-out factor, there isn’t any reason to put a big turd on this page. It isn’t a pie chart. It isn’t an area chart.
                                 </p>
+                            </td>
+                        </div>
+                        <div class="col-sm-4">
+                            <td>
+                                <img src="picture/poop.jpg" class="img-rounded" style="width: 300px;height: 300px;display:block;margin-right: auto;margin-left: auto">
                             </td>
                         </div>
                     </div>
