--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
 
 <head>
+    <meta name "author" content="Jamie HUANG">
+    <link rel="icon" href="茜.png">
     <link rel="stylesheet" href="jamie.css" type="text/css" />
     <link rel="stylesheet" href="tt.css" type="text/css" />
 
@@ -319,6 +321,7 @@
                 <h3 class="footer_tittle">
                     <span>DATA</span> "Visualization"
                 </h3>
+            </div>
             </div>
 
 
