--- a/index.html
+++ b/index.html
@@ -322,7 +322,13 @@
                     <span>DATA</span> "Visualization"
                 </h3>
             </div>
+            <div class="myname">
+                JAMIE
             </div>
+            <div class="mylogo">
+                <img clas="logo" src="picture/茜2.png">
+            </div>
+
 
 
 
