--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
                 JAMIE
             </div>
             <div class="mylogo">
-                <img clas="logo" src="picture/茜2.png">
+                <img class="logo" src="picture/茜2.png">
             </div>
 
 
