--- a/index.html
+++ b/index.html
@@ -319,7 +319,8 @@
         <footer>
             <div class="main_footer">
                 <h3 class="footer_tittle">
-                    <span>DATA</span> "Visualization"
+                    <span>DATA</span>
+                    <br>Visualization
                 </h3>
             </div>
             <div class="myname">
