--- a/index.html
+++ b/index.html
@@ -319,8 +319,7 @@
         <footer>
             <div class="main_footer">
                 <h3 class="footer_tittle">
-                    <span>DATA</span>
-                    <br>Visualization
+                    <span>DATA</span> Visualization
                 </h3>
 
                 <div class="myname">
